--- a/data/l4d1_storm.cfg
+++ b/data/l4d1_storm.cfg
@@ -34,31 +34,17 @@
 		// If you have changed the skybox but not reconnected you will see the old skybox, while new players who connect will see the new one.
 		//
 		// BUG: Users with "low" shader settings will see the black and purple missing texture image if you use a skybox from Valve maps
-		// "c1" - "c5" on maps "c8" - "c12". Skyboxes from "c6" - "c13" will do the same on maps "c1" - "c5".
-		// "c6", "c7" and "c13" display a blue (or other solid color) background instead of the missing texture image.
-		// The "docks_hdr" skybox works fine on all maps for all users.
 		//
-		// Accepted values and pictures of each skybox can be found here: http://developer.valvesoftware.com/wiki/Left_4_Dead_2_Sky_List
-		// "sky_l4d_c1_1_hdr"			Dead Center c1m1.
-		// "sky_l4d_c1_2_hdr"			Dead Center c1m2.
-		// "sky_l4d_c2m1_hdr"			Dark Carnival.
-		// "sky_l4d_night02_hdr"		Swamp Fever.
-		// "sky_l4d_predawn02_hdr"		Swamp Finale c3m4.
-		// "sky_l4d_c4m1_hdr"			Hard Rain Start.
-		// "sky_l4d_c4m4_hdr"			Hard Rain Storm.
-		// "sky_l4d_c5_1_hdr"			The Parish.
-		// "sky_l4d_c6m1_hdr"			The Passing.
-		// "river_hdr"					The Sacrifice.
-		// "sky_l4d_urban01_hdr"		No Mercy.
-		// "test_moon_hdr"				No Mercy (same as above?).
-		// "sky_day01_09_hdr"			Death Toll.
-		// "urbannightburning_hdr"		Dead Air.
-		// "sky_l4d_rural02_hdr"		Blood Harvest.
-		// "docks_hdr"					Docks (Not used).
-		// "sky_coldstream_1_hdr"		Cold Stream.
-		// "sky_coldstream_2_hdr"		Cold Stream.
-		// Default: ""
-		"skybox"				"docks_hdr"
+		// Accepted values and pictures of each skybox can be found here: https://developer.valvesoftware.com/wiki/Left_4_Dead_Sky_List
+		// "sky_l4d_urban01_hdr"		No Mercy
+		// "test_moon_hdr"				l4d_hospital02_subway
+		// "sky_day01_09_hdr"			Death Toll, Crash Course
+		// "urbannightburning_hdr"		Dead Air
+		// "sky_l4d_rural02_hdr"		Blood Harvest
+		// "river_hdr"					The Passing
+		// "docks_hdr"					Unused
+		// "highrise_hdr"				Unused
+		"skybox"				"sky_day01_09_hdr"
 
 		// ""=Map default. Affects overall map brightness. "a" is the darkest. "z" is the brightest.
 		// Causes 0.2 seconds of low FPS three times, only on the player who spawns for the first time, this forces the client to refresh the maps lighting.
@@ -246,7 +232,7 @@
 
 	"Sunny"
 	{
-		"skybox"				"sky_l4d_c5_1_hdr"
+		"skybox"				"river_hdr"
 		"light_style"			"z"
 		"background"			"50 50 50"
 		"fog_color"				""
@@ -287,7 +273,7 @@
 	}
 	"SunnyRainy"
 	{
-		"skybox"				"sky_l4d_c1_1_hdr"
+		"skybox"				"river_hdr"
 		"light_style"			"z"
 		"background"			"50 50 50"
 		"fog_color"				""
@@ -328,7 +314,7 @@
 	}
 	"DarkRainy"
 	{
-		"skybox"				"sky_l4d_c4m4_hdr"
+		"skybox"				"sky_day01_09_hdr"
 		"light_style"			"b"
 		"background"			"20 20 20"
 		"fog_color"				"5 5 5"
@@ -369,7 +355,7 @@
 	}
 	"ForeverStorm"
 	{
-		"skybox"				"sky_l4d_c4m4_hdr"
+		"skybox"				"sky_day01_09_hdr"
 		"light_style"			"c"
 		"background"			"20 20 20"
 		"fog_color"				"10 10 15"
@@ -395,7 +381,7 @@
 	}
 	"DarkFoggy"
 	{
-		"skybox"				"sky_l4d_rural02_hdr"
+		"skybox"				"sky_day01_09_hdr"
 		"light_style"			"c"
 		"background"			"20 20 20"
 		"fog_color"				"5 5 5"
@@ -433,7 +419,7 @@
 	}
 	"Foggy"
 	{
-		"skybox"				"sky_l4d_predawn02_hdr"
+		"skybox"				"sky_day01_09_hdr"
 		"light_style"			"z"
 		"background"			"20 20 20"
 		"fog_color"				"20 20 20"
@@ -525,110 +511,10 @@
 	// ====================================================================================================
 	// MAP SPECIFIC SECTIONS:
 	// ====================================================================================================
-	// Dead Center - Map specific section. No rain; default skybox, fog and background. This is because the background skybox image will not blend with a different skybox, fog or background color.
 
-	"c1m1_hotel"
+	"l4d_airport01_greenhouse"
 	{
-		"skybox"				""
-		"background"			""
-		"fog_color"				""
-		"rain"					"0"
-		"wind"					"0"
-		"fog_idle"				"0"
-		"fog_storm"				"0"
-		"use_section"			"random"
-		"light_style"			"c"
-	}
-	"c1m2_streets"
-	{
-		"use_section"			"all"
-		//"use_section"			"very_dark"
-	}
-	"c1m3_mall"
-	{
-		"skybox"				""
-		"background"			""
-		"fog_color"				""
-		"rain"					"0"
-		"wind"					"0"
-		"use_section"			"random"
-	}
-	"c1m4_atrium"
-	{
-		"skybox"				""
-		"background"			""
-		"fog_color"				""
-		"rain"					"0"
-		"wind"					"0"
-		"use_section"			"random"
-	}
-	"very_dark"
-	{
-		"skybox"				"sky_l4d_c4m4_hdr"
-		"light_style"			"b"
-		"background"			"1 1 1"
-		"fog_color"				"1 1 1"
-		"sun"					"0"
-		"time_of_day"			"-1"
-		"rain"					"0"
-		"rain_storm"			"250"
-		"wind"					"0"
-		"clouds"				"1"
-		"forever"				"1"
-		"lightning"				"1"
-		"lightning_damage"		"1"
-		"lightning_flash"		"1"
-		"fog_idle"				"100"
-		"fog_storm"				"100"
-		"fog_blend"				"4"
-		"fog_idle_start"		"-256"
-		"fog_storm_start"		"-256"
-		"fog_opaque_idle"		"0.5"
-		"fog_opaque_storm"		"0.5"
-		"post_process_storm"	""
-		"post_process_idle"		""
-		"duration_max"			"0"
-		"duration_min"			"0"
-		"timeout"				"0"
-		"trigger_timer"			"0"
-		"trigger_finale"		"50"
-		"trigger_horde"			"50"
-		"trigger_panic"			"50"
-		"trigger_pourgas"		"0"
-		"trigger_scavenge"		"100"
-		"trigger_tank"			"50"
-		"trigger_tank_death"	"50"
-		"trigger_witch_alert"	"50"
-		"trigger_witch"			"50"
-	}
-
-
-	// Hard Rain - Map specific section. Does not load any Storm data since the "null" section is not defined in the config.
-	"c4m1_milltown_a"
-	{
-		"use_section"			"null"
-	}
-	"c4m2_sugarmill_a"
-	{
-		"use_section"			"null"
-	}
-	"c4m3_sugarmill_b"
-	{
-		"use_section"			"null"
-	}
-	"c4m4_milltown_b"
-	{
-		"use_section"			"null"
-	}
-	"c4m5_milltown_escape"
-	{
-		"use_section"			"null"
-	}
-
-	// Blood Harvest - A very dark and eerie version of blood harvest
-	"c12m1_hilltop"
-	{
-		"skybox"				"urbannightburning_hdr"
+		"skybox"				"sky_day01_09_hdr"
 		"light_style"			"b"
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
@@ -664,16 +550,16 @@
 		"trigger_witch_alert"	"50"
 		"trigger_witch"			"50"
 	}
-	"c12m2_traintunnel"
+	"l4d_airport02_offices"
 	{
-		"skybox"				"urbannightburning_hdr"
+		"skybox"				"sky_day01_09_hdr"
 		"light_style"			"b"
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
 		"time_of_day"			"-1"
-		"rain"					"1"
-		"wind"					"1"
+		"rain"					"0"
+		"wind"					"0"
 		"clouds"				"1"
 		"forever"				"0"
 		"lightning"				"1"
@@ -688,10 +574,10 @@
 		"fog_opaque_storm"		"0.8"
 		"post_process_storm"	""
 		"post_process_idle"		""
-		"duration_max"			"40"
-		"duration_min"			"20"
-		"timeout"				"45"
-		"trigger_timer"			"180"
+		"duration_max"			"0"
+		"duration_min"			"0"
+		"timeout"				"0"
+		"trigger_timer"			"0"
 		"trigger_finale"		"50"
 		"trigger_horde"			"50"
 		"trigger_panic"			"50"
@@ -702,16 +588,16 @@
 		"trigger_witch_alert"	"50"
 		"trigger_witch"			"50"
 	}
-	"c12m3_bridge"
+	"l4d_airport03_garage"
 	{
-		"skybox"				"urbannightburning_hdr"
+		"skybox"				"sky_day01_09_hdr"
 		"light_style"			"b"
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
 		"time_of_day"			"-1"
-		"rain"					"1"
-		"wind"					"1"
+		"rain"					"0"
+		"wind"					"0"
 		"clouds"				"1"
 		"forever"				"0"
 		"lightning"				"1"
@@ -726,10 +612,10 @@
 		"fog_opaque_storm"		"0.8"
 		"post_process_storm"	""
 		"post_process_idle"		""
-		"duration_max"			"40"
-		"duration_min"			"20"
-		"timeout"				"45"
-		"trigger_timer"			"180"
+		"duration_max"			"0"
+		"duration_min"			"0"
+		"timeout"				"0"
+		"trigger_timer"			"0"
 		"trigger_finale"		"50"
 		"trigger_horde"			"50"
 		"trigger_panic"			"50"
@@ -740,16 +626,16 @@
 		"trigger_witch_alert"	"50"
 		"trigger_witch"			"50"
 	}
-	"c12m4_barn"
+	"l4d_airport04_terminal"
 	{
-		"skybox"				"urbannightburning_hdr"
+		"skybox"				"sky_day01_09_hdr"
 		"light_style"			"b"
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
 		"time_of_day"			"-1"
-		"rain"					"1"
-		"wind"					"1"
+		"rain"					"0"
+		"wind"					"0"
 		"clouds"				"1"
 		"forever"				"0"
 		"lightning"				"1"
@@ -764,10 +650,10 @@
 		"fog_opaque_storm"		"0.8"
 		"post_process_storm"	""
 		"post_process_idle"		""
-		"duration_max"			"40"
-		"duration_min"			"20"
-		"timeout"				"45"
-		"trigger_timer"			"180"
+		"duration_max"			"0"
+		"duration_min"			"0"
+		"timeout"				"0"
+		"trigger_timer"			"0"
 		"trigger_finale"		"50"
 		"trigger_horde"			"50"
 		"trigger_panic"			"50"
@@ -778,9 +664,9 @@
 		"trigger_witch_alert"	"50"
 		"trigger_witch"			"50"
 	}
-	"c12m5_cornfield"
+	"l4d_airport05_runway"
 	{
-		"skybox"				"urbannightburning_hdr"
+		"skybox"				"sky_day01_09_hdr"
 		"light_style"			"b"
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
