--- a/data/l4d2_storm.cfg
+++ b/data/l4d2_storm.cfg
@@ -120,6 +120,18 @@
 		// Default: ""
 		"sun"					"55 75 100"
 
+		// 0=Use maps default value. Overlay size of the sun.
+		"sun_overlaysize"		"0"
+
+		// 0=Use maps default value. Size of the sun.
+		"sun_size"				"0"
+
+		// 0=Use maps default value. Overlay size of the sun during a storm.
+		"sun_overlaysize_storm"	"0"
+
+		// 0=Use maps default value. Size of the sun during a storm.
+		"sun_size_storm"		"0"
+
 		// Changes the "sv_force_time_of_day" cvar. -1=Use cvar value. 0=Midnight, 1=Dawn, 2=Morning, 3=Afternoon, 4=Dusk, 5=Evening. Sitting witch spawn (0,1,5).
 		"time_of_day"			"-1"
 
@@ -251,6 +263,10 @@
 		"background"			"50 50 50"
 		"fog_color"				""
 		"sun"					"246 226 126"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"rain_idle"				"0"
@@ -292,6 +308,10 @@
 		"background"			"50 50 50"
 		"fog_color"				""
 		"sun"					"246 226 126"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"1"
 		"rain_idle"				"100"
@@ -333,6 +353,10 @@
 		"background"			"20 20 20"
 		"fog_color"				"5 5 5"
 		"sun"					"50 50 75"
+		"sun_overlaysize"		"1"
+		"sun_size"				"1"
+		"sun_overlaysize_storm"	"1"
+		"sun_size_storm"		"1"
 		"time_of_day"			"-1"
 		"rain"					"1"
 		"rain_idle"				"150"
@@ -374,6 +398,10 @@
 		"background"			"20 20 20"
 		"fog_color"				"10 10 15"
 		"sun"					"50 50 75"
+		"sun_overlaysize"		"1"
+		"sun_size"				"1"
+		"sun_overlaysize_storm"	"1"
+		"sun_size_storm"		"1"
 		"time_of_day"			"-1"
 		"rain"					"1"
 		"rain_type"				"0"
@@ -399,7 +427,11 @@
 		"light_style"			"c"
 		"background"			"20 20 20"
 		"fog_color"				"5 5 5"
-		"sun"					"0"
+		"sun"					"1"
+		"sun_overlaysize"		"1"
+		"sun_size"				"1"
+		"sun_overlaysize_storm"	"1"
+		"sun_size_storm"		"1"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
@@ -438,6 +470,10 @@
 		"background"			"20 20 20"
 		"fog_color"				"20 20 20"
 		"sun"					"246 226 126"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
@@ -484,6 +520,10 @@
 		"background"			""
 		"fog_color"				""
 		"sun"					""
+		"sun_overlaysize"		""
+		"sun_size"				""
+		"sun_overlaysize_storm"	""
+		"sun_size_storm"		""
 		"time_of_day"			""
 		"rain"					""
 		"rain_idle"				""
@@ -569,6 +609,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"1"
+		"sun_size"				"1"
+		"sun_overlaysize_storm"	"1"
+		"sun_size_storm"		"1"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"rain_storm"			"250"
@@ -633,6 +677,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
@@ -671,6 +719,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"1"
 		"wind"					"1"
@@ -709,6 +761,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"1"
 		"wind"					"1"
@@ -747,6 +803,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"1"
 		"wind"					"1"
@@ -785,6 +845,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
