--- a/data/l4d1_storm.cfg
+++ b/data/l4d1_storm.cfg
@@ -106,6 +106,18 @@
 		// Default: ""
 		"sun"					"55 75 100"
 
+		// 0=Use maps default value. Overlay size of the sun.
+		"sun_overlaysize"		"0"
+
+		// 0=Use maps default value. Size of the sun.
+		"sun_size"				"0"
+
+		// 0=Use maps default value. Overlay size of the sun during a storm.
+		"sun_overlaysize_storm"	"0"
+
+		// 0=Use maps default value. Size of the sun during a storm.
+		"sun_size_storm"		"0"
+
 		// Changes the "sv_force_time_of_day" cvar. -1=Use cvar value. 0=Midnight, 1=Dawn, 2=Morning, 3=Afternoon, 4=Dusk, 5=Evening. Sitting witch spawn (0,1,5).
 		"time_of_day"			"-1"
 
@@ -237,6 +249,10 @@
 		"background"			"50 50 50"
 		"fog_color"				""
 		"sun"					"246 226 126"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"rain_idle"				"0"
@@ -278,6 +294,10 @@
 		"background"			"50 50 50"
 		"fog_color"				""
 		"sun"					"246 226 126"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"1"
 		"rain_idle"				"100"
@@ -319,6 +339,10 @@
 		"background"			"20 20 20"
 		"fog_color"				"5 5 5"
 		"sun"					"50 50 75"
+		"sun_overlaysize"		"1"
+		"sun_size"				"1"
+		"sun_overlaysize_storm"	"1"
+		"sun_size_storm"		"1"
 		"time_of_day"			"-1"
 		"rain"					"1"
 		"rain_idle"				"150"
@@ -360,6 +384,10 @@
 		"background"			"20 20 20"
 		"fog_color"				"10 10 15"
 		"sun"					"50 50 75"
+		"sun_overlaysize"		"1"
+		"sun_size"				"1"
+		"sun_overlaysize_storm"	"1"
+		"sun_size_storm"		"1"
 		"time_of_day"			"-1"
 		"rain"					"1"
 		"rain_type"				"0"
@@ -386,6 +414,10 @@
 		"background"			"20 20 20"
 		"fog_color"				"5 5 5"
 		"sun"					"0"
+		"sun_overlaysize"		"1"
+		"sun_size"				"1"
+		"sun_overlaysize_storm"	"1"
+		"sun_size_storm"		"1"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
@@ -424,6 +456,10 @@
 		"background"			"20 20 20"
 		"fog_color"				"20 20 20"
 		"sun"					"246 226 126"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
@@ -470,6 +506,10 @@
 		"background"			""
 		"fog_color"				""
 		"sun"					""
+		"sun_overlaysize"		""
+		"sun_size"				""
+		"sun_overlaysize_storm"	""
+		"sun_size_storm"		""
 		"time_of_day"			""
 		"rain"					""
 		"rain_idle"				""
@@ -519,6 +559,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
@@ -557,6 +601,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
@@ -595,6 +643,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
@@ -633,6 +685,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
@@ -671,6 +727,10 @@
 		"background"			"1 1 1"
 		"fog_color"				"1 1 1"
 		"sun"					"0"
+		"sun_overlaysize"		"0"
+		"sun_size"				"0"
+		"sun_overlaysize_storm"	"0"
+		"sun_size_storm"		"0"
 		"time_of_day"			"-1"
 		"rain"					"0"
 		"wind"					"0"
